--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.19.2",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
