--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_URL=https://sheetdb.io/api/v1/nx21weheoidk1
-VITE_TEMPLATE_ID=template_s2imcyj
-VITE_SERVICE_ID=service_ohnddop
-VITE_PUBLIC_KEY=Owqcd8UbWTE604dg5 
+VITE_URL=https://sheetdb.io/api/v1/awsmvruwa7u0q
+VITE_TEMPLATE_ID=template_3uxwkcg
+VITE_SERVICE_ID=service_ofsh80k
+VITE_PUBLIC_KEY=s7HnvqtIpsL4BbSoN
